# pitch-builder-ai

./: .editorconfig  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: Dockerfile  README.md  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: analyze.py  generate.py  models.py
backend/app/db/: models.py  session.py
backend/app/schemas/: analysis.py
backend/app/services/: llm_client.py  parsers.py  pipeline.py  prompts.py  token_counter.py
backend/tests/: test_api.py  test_follow_up_email.py  test_models.py  test_parsers.py  test_schemas.py  test_token_counter.py
frontend/: .prettierignore  eslint.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo  vitest.config.mts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/analysis/[id]/: page.tsx
frontend/src/components/: byok-modal.tsx  copy-button.tsx  model-select.tsx  providers.tsx
frontend/src/components/cards/: executive-summary-card.tsx  key-metrics-card.tsx  next-steps-card.tsx  pain-points-card.tsx  profile-card.tsx  solutions-card.tsx
frontend/src/components/pdf/: analysis-pdf.tsx
frontend/src/components/ui/: button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/lib/: analysis-types.ts  api.ts  utils.test.ts  utils.ts
frontend/src/stores/: settings.test.ts  settings.ts  ui.test.ts  ui.ts
