[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sales-intelligence-backend"
version = "0.1.0"
description = "FastAPI backend for the AI-powered sales intelligence dashboard"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "aiosqlite>=0.21.0",
  "fastapi>=0.115.11",
  "httpx>=0.28.1",
  "pandas>=2.2.3",
  "pydantic>=2.10.6",
  "PyPDF2>=3.0.1",
  "python-docx>=1.1.2",
  "python-multipart>=0.0.20",
  "sse-starlette>=2.2.1",
  "sqlalchemy>=2.0.38",
  "tenacity>=9.0.0",
  "tiktoken>=0.9.0",
  "uvicorn[standard]>=0.34.0"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.15.0",
  "pytest>=8.3.5",
  "pytest-asyncio>=0.25.3",
  "pytest-mock>=3.14.0",
  "ruff>=0.11.0"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
ignore_missing_imports = true
